--- a/214/icecream.css
+++ b/214/icecream.css
@@ -1,29 +1,39 @@
-body{
-	font-family: "Marker Felt", "Comic Sans MS", fantasy;
-	color: blue;
+<head>
+<style>
+div.container {
+    width: 100%;
+    border: 1px solid gray;
 }
 
-h1 {
-	font-size: 1.3em;
-	text-align: center;
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
 }
 
-table {
-	margin-left: auto;
-	margin-right: auto;
-	text-align: left;
-	border-collapse: collapse;
-	cellspacing: 0px;
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
 }
 
-tr {
-	border: 1px solid #ffffff;
-	text-align: center;
-	background-color:#9FB6CD; 
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
 }
 
-th {
-	text-align: center;
-	color: #ffffff;
-	background-color: #003366;
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
 }
+</style>
+</head>
