--- a/214/tes.css
+++ b/214/tes.css
@@ -1,3 +1,8 @@
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
+
 header, footer {
     padding: 1em;
     color: white;
@@ -28,3 +33,16 @@ article {
     padding: 1em;
     overflow: hidden;
 }
+
+
+<body>
+
+<div class="container">
+
+<nav>
+  <ul>
+    <li><a href="#">London</a></li>
+    <li><a href="#">Paris</a></li>
+    <li><a href="#">Tokyo</a></li>
+  </ul>
+</nav>
